@@ -131,7 +131,7 @@ def callGenomeSegment(self, gseg, segFiles, taskPrefix="", dependencies=None) :
 
     # do not apply VQSR in exome case
     if not self.params.isExome :
-        segCmd.extend(['--indel-scoring-models', self.params.scoringModelFile])
+        segCmd.extend(['--somatic-scoring-models', self.params.scoringModelFile])
 
     for bamPath in self.params.normalBamList :
         segCmd.extend(["-bam-file", bamPath])
